--- a/less/main.less
+++ b/less/main.less
@@ -11,6 +11,7 @@
 @import "bootstrap-responsive";
 @import "base";
 @import "employer";
+@import "pagination";
 /* Partials 
 ================================================================ */
 @import "partial/fancybox";
