--- a/less/adcontainer.less
+++ b/less/adcontainer.less
@@ -1,5 +1,5 @@
 .notice-container {
-	margin-top: 15px;
+	//margin-top: 15px;
 }
 
 .notice-container > header {
@@ -36,17 +36,19 @@
 		text-shadow: 0px 1px 0 rgba(255, 255, 255, 0.6);		
 	}
 }
+.employer {
+	.notice-container > footer {
+		background-repeat: repeat;
+		height: 50px;
+		margin-bottom: 5px;
+	}
+	.notice-container > header, .notice-container > article, .notice-container > footer {
+		border: 1px dashed #cecece;
+		.box-sizing(border-box);
+		padding: 40px;
+		width: 100%;
 
-.notice-container > footer {
-	background-repeat: repeat;
-	height: 50px;
-	margin-bottom: 5px;
+	}	
 }
-.notice-container > header, .notice-container > article, .notice-container > footer {
-	border: 1px dashed #cecece;
-	.box-sizing(border-box);
-	padding: 40px;
-	width: 100%;
 
-}
 
