--- a/less/applicant.less
+++ b/less/applicant.less
@@ -62,11 +62,36 @@
 
 		}
 	}
-	.accordion-inner { overflow: hidden; }
+	.accordion-heading .accordion-toggle {
+		.font-normal();
+		font-size: 16px;
+		line-height: 20px;
+		font-weight: bold;
+		padding: 10px 10px;
+		color: #555;
+		text-shadow: 0 1px 0 #fff;
+		display: block;
+		border: 1px solid #CACACA;
+		
+		background-color: #eaeaea;
+		background-image: -moz-linear-gradient(#fafafa, #eaeaea);
+		background-image: -webkit-linear-gradient(#fafafa, #eaeaea);
+		background-image: linear-gradient(#fafafa, #eaeaea);
+		background-repeat: repeat-x;
+		margin: 0;
+		h4 {
+			margin: 0;
+		}
+	}
+	.accordion-inner { 
+		border: 1px solid #ccc;
+		border-top: 0;
+		overflow: hidden; 
+	}
 	.accordion-group { 
 		
 		background: white;
-		border-color: #dadada;
+		border: 0;
 		.border-radius(0);
 		margin-bottom: 21px; 
 
