--- a/less/form.less
+++ b/less/form.less
@@ -5,13 +5,31 @@
 .validate-form , .form {
 	h4 {
 		.font-normal();
-		margin-bottom: 21px;
+		font-size: 16px;
+		line-height: 20px;
+		font-weight: bold;
+		padding: 10px 10px;
+		color: #555;
+		text-shadow: 0 1px 0 #fff;
+		display: block;
+		border: 1px solid #CACACA;
+		border-bottom: 0 none;
+		background-color: #eaeaea;
+		background-image: -moz-linear-gradient(#fafafa, #eaeaea);
+		background-image: -webkit-linear-gradient(#fafafa, #eaeaea);
+		background-image: linear-gradient(#fafafa, #eaeaea);
+		background-repeat: repeat-x;
+		margin: 0;
+		
 	}
 
-	> div, > section {
+	.pad {
 		.box-sizing(border-box);
-		border: 1px solid #dadada;
+		border: 1px solid #ccc;
 		padding: 10px 20px;
+		
+	}
+	> div {
 		margin-bottom: 21px;
 	}
 
@@ -27,11 +45,11 @@
 		margin: 0;
 		//padding: 0 0 20px 20px;
 		//float: left;
-		margin-right: 34px;
+		//margin-right: 34px;
 
 		li {
 			list-style: none;
-
+			
 			label { 
 				
 				float: left; 
@@ -48,7 +66,7 @@
 
 			input[type="submit"], input[type="button"] {
 				margin-top: 10px;
-				margin-left: 5px;
+				
 			}
 
 		}
@@ -58,8 +76,6 @@
 		margin-bottom: 0;
 		div {  margin-bottom: 0;}
 	}
-
-	&#job-apply div { border: 0; }
 }
 
 
@@ -78,6 +94,23 @@
 	}
 }
 
+#form-login {
+	a {
+		display: block;
+		font-size: 12px;
+		margin-top: 12px;
+		text-align: center;
+	}
+	input[type="submit"], input[type="button"] {
+		margin-top: 10px;
+		margin-right: 34px;
+	}
+	li { overflow: hidden; }
+}
+
+#form-reset {
+	label { display: block; }
+}
 
 /* =APPLY JOB
 =================================================================== */
