--- a/less/listing.less
+++ b/less/listing.less
@@ -6,13 +6,14 @@
 	.listings {
 		margin-left: 0;
 		> li {
-			
-			font-size: 13px;
-			list-style: none;
-			padding: 27px 20px;
-			border: 1px solid @green;
-			margin-bottom: 21px;
+			background: #f8f8f8;
+			border: solid 1px #dedede;
+			box-shadow: inset 0 0 10px #ddd;
 			clear: both;
+			list-style: none;
+			padding: 20px;
+			margin-bottom: 21px;
+			position: relative;
 			
 			//min-height: 202px;
 
@@ -124,7 +125,7 @@
 				clear: both;
 			}
 
-			.location, .salary,  {
+			.salary,  {
 				color: #222222;
 				font-weight: bold;
 			}
@@ -199,14 +200,7 @@
 		}
 	}
 
-	.pagination {
-		ul li a {
-			color: #006dbc ;
-			&:hover {
-				color: #004475;
-			}
-		}
-	}
+	
 
 	#feature-listing, #feature-listing-mobile {
 		background: @green;
