more fixes and changes

--- a/less/employer.less
+++ b/less/employer.less
@@ -102,6 +102,8 @@
 	}
 
 	//Post 
+	
+	
 	.employer-form {
 		
 		ul {
@@ -133,7 +135,11 @@
 			
 			img#logo,{
 				display: block;
+			}
+			
+			.files {
 				margin-left: 150px;
+				margin-bottom: 12px;
 			}
 
 			.tool-tip {
@@ -397,6 +403,12 @@
 			}
 		}
 		
+		#logo-validation { display: none; }
+		
+	}
+	
+	.modal-image {
+		text-align: center;
 	}
 }
 
