--- a/less/listing.less
+++ b/less/listing.less
@@ -49,7 +49,7 @@
 	}
 
 	#job-listing {
-
+		img { height: 40px;}
 		.shortlist-tag {
 			display: none;
 			background: @green;
@@ -97,7 +97,7 @@
 			.box-sizing(border-box);
 
 			float: left;
-			width: 78%;
+			width: 73%;
 			padding-right: 15px;
 			h2 a {
 				&:hover { 
@@ -110,7 +110,7 @@
 		}
 
 		.additional-info {
-			width: 22%;
+			width: 27%;
 			float: right;
 			h4 {
 				.font-normal();
@@ -143,6 +143,9 @@
 			.radio {
 				padding-left: 40px;
 			}
+		}
+		#job-controls {
+			width: 27%;
 		}
 	}
 
