--- a/less/main.less
+++ b/less/main.less
@@ -18,6 +18,6 @@
 @import "partial/validation-engine";
 @import "partial/colour-code";
 @import "partial/switch";
-
+@import "partial/fileupload";
 //HELPERS
 
