massive styles update

--- a/less/footer.less
+++ b/less/footer.less
@@ -1,26 +1,21 @@
 #footer {
-	#gradient .vertical ( #202020, #111111);
-	//background: #252525;
+
+	
 	bottom: 0;
-	color: #fff;
+	
 	padding-bottom: 45px;
 	padding-top: 45px;
 
-
-
-	// > .container { padding-top: 9px; }
-
-	// img { margin-bottom: 9px; }
-
 	// a { color: #ccc; }
 	h3 {
-		.font-light();
+		color: @dark-blue;
+		.lato-semibold();
 	}
 	ul {
 		margin-left: 0;
 		li {
-			font-size: 12px;
-			font-family: tahoma, @base-font-stack;
+			font-size: 14px;
+			.lato-normal();
 			float: left;
 			list-style: none;
 			ul {
@@ -40,7 +35,7 @@
 		}
 	}
 	#copyright { 
-		.font-light();
+		.lato-normal();
 		font-size: 12px;
 		padding-left: 30px;
 	}
