--- a/less/guide.less
+++ b/less/guide.less
@@ -48,13 +48,16 @@
 	h4,
 	h5,
 	h6 {
-	  
-	}
-	h1 {
+	 
 	 
 	}
+	h1 {
+		.lato-light();
+		color: #fff;
+	}
 	h2 {
-	  
+		.lato-light();
+		color: #fff;
 	}
 	h3 {
 	  
@@ -110,7 +113,7 @@
 form {
 	label {
 		font-size: 12px;
-		font-family: tahoma;
+		.lato-normal();
 	}	
 	input {
 		.border-radius(0);
