--- a/less/listing.less
+++ b/less/listing.less
@@ -52,7 +52,7 @@
 		img { height: 40px;}
 		.shortlist-tag {
 			display: none;
-			background: @green;
+			background: @light-orange;
 			height: 40px;
 			width: 36px;
 			position: absolute;
@@ -70,7 +70,7 @@
 				height: 0; 
 				border-left: 18px solid transparent;
 				border-right: 18px solid transparent;
-				border-top: 5px solid @green;
+				border-top: 5px solid @light-orange;
 				position: absolute;
 				bottom: -5px;
 
@@ -101,7 +101,7 @@
 			padding-right: 15px;
 			h2 a {
 				&:hover { 
-					color: @green;
+					color: @light-orange;
 				}
 			}
 			p > a {
@@ -206,7 +206,7 @@
 	
 
 	#feature-listing, #feature-listing-mobile {
-		background: @green;
+		background: @light-orange;
 		border-left: 1px solid #e4e4e4;
 		border-right: 1px solid #e4e4e4;
 		margin-top: 10px;
