--- a/less/mixins/font.less
+++ b/less/mixins/font.less
@@ -13,17 +13,17 @@
 	font-weight: 600;
 }
 
-.open-sans-light() {
-	font-family: 'Open Sans', sans-serif;
+.lato-light() {
+	font-family: 'Lato', sans-serif;
 	font-weight:300;
 }
 
-.open-sans-semibold() {
-	font-family: 'Open Sans', sans-serif;
+.lato-semibold() {
+	font-family: 'Lato', sans-serif;
 	font-weight:600;
 }
 
-.open-sans-normal() {
-	font-family: 'Open Sans', sans-serif;
+.lato-normal() {
+	font-family: 'Lato', sans-serif;
 	font-weight:400;
 }
