--- a/less/mixins/settings.less
+++ b/less/mixins/settings.less
@@ -36,9 +36,10 @@
 @gray: #d9d9d9;
 @gray-dark: #b7b7b7;
 @gray-darker: #444;
-@blue: #00AEEF;
-@green: #0079c1;
-@dark-green: #4d9f1c;
+@blue: #01a5e3;
+@dark-blue: #055285;
+@light-orange: #fbc544;
+@dark-orange: #f09216;
 
 @button-blue: #0079c1;
 @button-lighter-blue: #00a1ff;
