--- a/less/partial/validation-engine.less
+++ b/less/partial/validation-engine.less
@@ -41,7 +41,7 @@
   color: black;
   width: 150px;
   font-size: 11px;
-  font-family: tahoma;
+  .lato-normal();
   border: 2px solid #f4b6b6;
   box-shadow: 0 0 6px black;
   -moz-box-shadow: 0 0 6px black;
