--- a/less/applicant.less
+++ b/less/applicant.less
@@ -112,7 +112,7 @@
 			margin-bottom: 21px;
 			width: 100%;
 			th { 
-				background: @green;
+				background: @light-orange;
 				
 				color: white;
 				font-weight: normal;
