--- a/less/base.less
+++ b/less/base.less
@@ -11,17 +11,7 @@
 //@import 'partial/colour-code.less';
 
 body {
-	background: #f6f5f1;
-	//#gradient .vertical (#ddd, #fff);
-	
-	// // background: -moz-linear-gradient(top,  rgba(11,103,205,0) 0%, rgba(11,103,205,0.28) 49%, rgba(13,105,206,0.29) 50%, rgba(125,185,232,0) 100%); /* FF3.6+ */
-	// // background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(11,103,205,0)), color-stop(49%,rgba(11,103,205,0.28)), color-stop(50%,rgba(13,105,206,0.29)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
-	// // background: -webkit-linear-gradient(top,  rgba(11,103,205,0) 0%,rgba(11,103,205,0.28) 49%,rgba(13,105,206,0.29) 50%,rgba(125,185,232,0) 100%); /* Chrome10+,Safari5.1+ */
-	// // background: -o-linear-gradient(top,  rgba(11,103,205,0) 0%,rgba(11,103,205,0.28) 49%,rgba(13,105,206,0.29) 50%,rgba(125,185,232,0) 100%); /* Opera 11.10+ */
-	// // background: -ms-linear-gradient(top,  rgba(11,103,205,0) 0%,rgba(11,103,205,0.28) 49%,rgba(13,105,206,0.29) 50%,rgba(125,185,232,0) 100%); /* IE10+ */
-	// background: linear-gradient(to bottom,  rgba(11,103,205,0) 0%,rgba(11,103,205,0.28) 49%,rgba(13,105,206,0.29) 50%,rgba(125,185,232,0) 100%); /* W3C */
-	// filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000b67cd', endColorstr='#007db9e8',GradientType=0 ); /* IE6-9 */
-
+	background: url('/img/backgrounds/gradient-blue.png') repeat-x top center;
 }
 @import 'shadow';
 
@@ -59,12 +49,12 @@ a {
 	}
 }
 button, input[type=submit], .container-header, .btn {
-	.open-sans-light();
+	.lato-light();
 }
 
 h1.span12 { margin-bottom: 21px;}
 .container-header {
-	background: @green;
+	background: @blue;
 	border: 0;
 	border-bottom: 1px solid #e5e5e5;
 	clear: both;
@@ -73,7 +63,6 @@ h1.span12 { margin-bottom: 21px;}
 	font-size: 21px;
 	
 	line-height: 40px;
-	//#gradient .vertical(#ffffff, #f5f5f5);
 	text-indent: 10px;
 	margin-bottom: 21px;
 	margin-top: 0;
@@ -102,7 +91,7 @@ h1.span12 { margin-bottom: 21px;}
 
 
 
-	#search-filter { 
+/*	#search-filter { 
 
 		font-size: 11px !important;
 		background: #fff;
@@ -130,7 +119,7 @@ h1.span12 { margin-bottom: 21px;}
 		.btn-primary {
 			margin-top: 12px;
 		}
-	}
+	}*/
 
 	#emp-register {
 		.container-header{
@@ -152,7 +141,7 @@ h1.span12 { margin-bottom: 21px;}
 
 		p { 
 			
-			font-family: Arial, Helvetica, sans-serif;
+			.lato-normal();
 			margin: 0;	
 			//margin-bottom:6px;
 		}
@@ -160,7 +149,7 @@ h1.span12 { margin-bottom: 21px;}
 			margin-left:20px;
 			li{
 				background: none;
-				font-family: Arial, Helvetica, sans-serif;
+				.lato-normal();
 				font-size:12px;
 				list-style: disc;
 				padding: 0px;
@@ -182,7 +171,7 @@ h1.span12 { margin-bottom: 21px;}
 
 
 	#btn-apply {
-		//.open-sans-light();
+		//.lato-light();
 		width: 86%;
 		display: block;
 		margin: 0 auto;
@@ -206,7 +195,7 @@ h1.span12 { margin-bottom: 21px;}
 	}
 
 	.alert-info {
-		font-family: tahoma, san-serif;
+		.lato-normal();
 	}
 
 } 
