--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -223,7 +223,7 @@ textarea {
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  .lato-normal();
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -231,13 +231,13 @@ body {
 }
 
 a {
-  color: @green;
+  color: #333;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: @dark-green;
+  color: @dark-orange;
   text-decoration: underline;
 }
 
@@ -1065,7 +1065,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  .lato-normal();
 }
 
 label {
@@ -3344,22 +3344,11 @@ input[type="button"].btn-block {
 }
 
 .btn-primary {
-  color: #fff;
-
-
-text-shadow: 0 -1px #00629c;
+ color: #fff; text-shadow: 0 -1px #004c77;
 text-align: center;
 .button-background();
--moz-box-shadow: 0 1px #4dbeff inset;
--webkit-box-shadow: 0 1px #4dbeff inset;
-box-shadow: 0 1px #4dbeff inset;
--webkit-border-radius: 5px 5px 5px 5px;
--moz-border-radius: 5px 5px 5px 5px;
-border-radius: 5px 5px 5px 5px;
-border-color: #0079c1 #00588b #004b77;
-border-style: solid;
-border-width: 1px;
-
+.border-radius(5px);
+//border-color: #0079c1 #00588b #004b77;
 
 cursor: pointer;
 }
@@ -3375,7 +3364,8 @@ cursor: pointer;
   background: -ms-linear-gradient(bottom,#005282 0,#005282 20%,#0083cf 100%);
   background: -o-linear-gradient(bottom,#005282 0,#005282 20%,#0083cf 100%);
   background: linear-gradient(bottom,#005282 0,#005282 20%,#0083cf 100%);
-  border-color: #00629b #004872 #003b5d;
+  
+ // border-color: #00629b #004872 #003b5d;
   -moz-box-shadow: 0 1px #1794dc inset;
   -webkit-box-shadow: 0 1px #1794dc inset;
   box-shadow: 0 1px #1794dc inset;
@@ -4509,7 +4499,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
   padding: 4px 14px;
   margin-bottom: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  .lato-normal();
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
@@ -4617,7 +4607,7 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
-  color: @green;
+  color: @light-orange;
   text-decoration: none;
   background-color: transparent;
 }
@@ -4625,12 +4615,11 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > .active > a:hover,
 .navbar .nav > .active > a:focus
 {
-  color: #fff;
+  color: @dark-orange;
   text-decoration: none;
- .button-background();
- -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
-     -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
-          box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+  
+  border-bottom: 3px solid @dark-orange;
+  .box-sizing(border-box);
   /*background-color: #111111;*/
 }
 
@@ -4740,10 +4729,8 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav li.dropdown.open > .dropdown-toggle,
 .navbar .nav li.dropdown.active > .dropdown-toggle,
 .navbar .nav li.dropdown.open.active > .dropdown-toggle {
-  color: #fff;
-  .button-background();
-
-
+  color: @dark-orange;
+  border-bottom: 3px solid @dark-orange;
 }
 
 .navbar .nav li.dropdown > .dropdown-toggle .caret {
