--- a/less/employer.less
+++ b/less/employer.less
@@ -1,4 +1,10 @@
 .employer {
+	
+	h3 {
+		.lato-light();
+		color: white;
+	}
+	
 	.wrapper {
 		.border-radius(6px);
 		border: 1px solid #ccc;
@@ -28,7 +34,7 @@
 			width: 100%;
 			h2 {
 				color: white;
-				.open-sans-light();
+				.lato-light();
 				font-size: 19px;
 				line-height: 34px;
 				float: left;
@@ -57,7 +63,7 @@
 			.table-header-row {
 				color: #fff;
 				th {
-					.open-sans-light();
+					.lato-light();
 					background: @blue;
 					padding: 4px;
 					font-size: 14px;
@@ -74,23 +80,21 @@
 			.table-data-row {
 				
 				a { 
-					color: #333;
-					
 					&:hover { 
 						text-decoration: underline;
-						color: @green;
+						color: #fff;
 					}
 				}
-				&:hover { background: #e8eaef; }
+				&:hover { background: @light-orange; }
 				
 				td {
 					font-size: 12px;
-					font-family: tahoma, san-serif;
+					.lato-normal();
 					padding: 6px 10px;
 					border: 1px solid #ddd;
 					a { 
 						color: @button-blue; 
-						&:hover { color: #333; text-decoration: none; }
+						
 						i {
 							font-size: 14px;
 						}
@@ -329,7 +333,7 @@
 	}
 	#credit-card {
 		h3 { 
-			.open-sans-light();
+			.lato-light();
 		}
 		p { margin-bottom:21px;}
 		ul {
