--- a/less/employer_1.less
+++ b/less/employer_1.less
@@ -38,7 +38,7 @@ body {
 			}
 
 			h1 { 
-				color: @green;
+				color: @light-orange;
 				font-size: 16px; 
 				line-height: 74px;
 				
@@ -118,7 +118,7 @@ body {
 					}
 
 					&:hover {
-						 background: @green;
+						 background: @light-orange;
 						 a { color: #fff !important; }
 					}
 				}
@@ -434,7 +434,7 @@ body {
 						width: 98%;
 						h2 {
 							color: white;
-							.font-light();
+							.lato-normal();
 							font-size: 19px;
 							line-height: 34px;
 							float: left;
@@ -444,7 +444,7 @@ body {
 							background: #1571d7;
 							border: 1px solid #1571d7;
 							float: right;
-							.font-light();
+							.lato-normal();
 							a {
 								display: block;
 								color: #fff;
@@ -462,7 +462,7 @@ body {
 							color: #fff;
 							th {
 								.font-light();
-								background: @green;
+								background: @light-orange;
 								padding: 4px;
 								font-size: 15px;
 								text-align: left;
@@ -478,7 +478,7 @@ body {
 								
 								&:hover { 
 									text-decoration: underline;
-									color: @green;
+									color: @light-orange;
 								}
 							}
 							&:hover { background: #e8eaef; }
@@ -522,16 +522,16 @@ body {
 						}
 
 						&:hover { 
-							background: @green;
-							border: 1px solid @green;
+							background: @light-orange;
+							border: 1px solid @light-orange;
 							border-bottom: 0;
 						}
 
 						&.active {
-							background: @green;
+							background: @light-orange;
 							padding-top: 6px; 
 							position: relative; 
-							border-color: @green; 
+							border-color: @light-orange; 
 
 							a {color: #fff;}
 						}
@@ -628,7 +628,7 @@ body {
 						}
 
 						.poptop { 
-							background: @green;
+							background: @light-orange;
 							border: 1px solid #ccc;
 							color: white;
 							cursor: pointer;
