--- a/less/feature.less
+++ b/less/feature.less
@@ -1,11 +1,7 @@
 body {
 
 	.featurette {
-		#gradient .vertical (#ddd, #fff);
-		-webkit-background-size: cover;
-		-moz-background-size: cover;
-		background-size: cover;
-		// #gradient .vertical ( #202020, #111111);
+
 		min-height: 500px;
 		width: 100%;
 		margin-top: 41px;
@@ -30,7 +26,7 @@ body {
 		}
 
 		.span12 {
-			border: 5px solid @green;
+			border: 5px solid @blue;
 			border-top: 0;
 			margin-top: 150px;
 			padding-bottom: 10px;
@@ -56,7 +52,7 @@ body {
 
 	#pull-down {
 		background: white;
-		border: 5px solid @green;
+		border: 5px solid @light-orange;
 		border-top: 0;
 		bottom: -40px;
 		cursor: pointer;
@@ -73,7 +69,7 @@ body {
 
 	#side-feature, #side-feature-mobile {
 		clear: both;
-		background: @green;
+		background: @light-orange;
 		padding: 5px 0 5px 0;
 		.drop-shadow-black;
 		&.affix-top {
@@ -93,7 +89,7 @@ body {
 			color: #222222;
 
 			&:hover {
-				color: @green;
+				color: @light-orange;
 				text-decoration: none;
 			}
 		}
