--- a/less/home.less
+++ b/less/home.less
@@ -8,24 +8,24 @@
 	...................................................................... */
 
 @import 'mixins/all';
-//@import 'partial/colour-code.less';
 
 #home {
-	background: #fff url('/img/backgrounds/home-bg.png') no-repeat center center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/img/backgrounds/home-bg.jpeg', sizingMethod='scale');
-	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/img/backgrounds/home-bg.jpeg', sizingMethod='scale')";
-	zoom:1;  	
-
+	background: url('/img/backgrounds/gradient-blue.png') repeat-x top center;
 	#top-feature{
 		margin-top: 64px;
 		text-align: center;
-		#brand {
-			//float: left;
-			width: 370px;
+		h1 { 
+			color: #fff;
+			.lato-light(); 
+			strong {
+				color: @light-orange;
+				.lato-normal();
+			}
+		}
+		
+		span {
+			
+			.lato-normal();
 		}
 		#ads {
 			float: right;
@@ -33,9 +33,8 @@
 		}
 	}
 	#job-search {
-		border: 5px solid @green;
+		border: 5px solid @blue;
 		border-top: 0;
-		//.box-shadow(0px 5px 9px #d5d5d5);
 		padding-bottom: 10px;
 		input.input-xlarge { width: 256px;}
 		.span1 { width: 92px;}
